--- a/client/package.json
+++ b/client/package.json
@@ -64,26 +64,26 @@
   },
   "prettier": "@genesislcap/prettier-config",
   "devDependencies": {
-    "@genesislcap/design-system-configurator": "{{versions.UI}}",
-    "@genesislcap/foundation-testing": "{{versions.UI}}",
-    "@genesislcap/genx": "{{versions.UI}}",
+    "@genesislcap/design-system-configurator": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-testing": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/genx": "14.165.3-alpha-da317ad.0",
     "husky": "^7.0.4",
     "lint-prepush": "^2.2.1",
     "lint-staged": "^12.4.1"
   },
   "dependencies": {
-    "@genesislcap/foundation-comms": "{{versions.UI}}",
-    "@genesislcap/foundation-entity-management": "{{versions.UI}}",
-    "@genesislcap/foundation-forms": "{{versions.UI}}",
-    "@genesislcap/foundation-header": "{{versions.UI}}",
-    "@genesislcap/foundation-inbox": "{{versions.UI}}",
-    "@genesislcap/foundation-layout": "{{versions.UI}}",
-    "@genesislcap/foundation-login": "{{versions.UI}}",
-    "@genesislcap/foundation-ui": "{{versions.UI}}",
-    "@genesislcap/foundation-utils": "{{versions.UI}}",
-    "@genesislcap/foundation-zero": "{{versions.UI}}",
-    "@genesislcap/foundation-zero-grid-pro": "{{versions.UI}}",
-    "@genesislcap/g2plot-chart": "{{versions.UI}}",
+    "@genesislcap/foundation-comms": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-entity-management": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-forms": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-header": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-inbox": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-layout": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-login": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-ui": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-utils": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-zero": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/foundation-zero-grid-pro": "14.165.3-alpha-da317ad.0",
+    "@genesislcap/g2plot-chart": "14.165.3-alpha-da317ad.0",
     "@microsoft/fast-components": "^2.21.6",
     "@microsoft/fast-element": "^1.7.0",
     "@microsoft/fast-foundation": "^2.33.4",
